# UnityPhysXPlugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_projects.cmd
NVIDIA.PhysX/: CMakeLists.txt  Partial.cs
NVIDIA.PhysX.Native/: CMakeLists.txt
NVIDIA.PhysX.Native/Helpers/: Helpers.cpp
NVIDIA.PhysX.Native/Interface/: Native.i
NVIDIA.PhysX.Native/Wrapper/: NativeCSHARP_wrap.cxx
NVIDIA.PhysX/Wrapper/: Native.cs  NativePINVOKE.cs  PxActorFlag.cs  PxActorList.cs  PxAggregate.cs  PxArticulationDriveType.cs  PxArticulationFlag.cs  PxArticulationJointDriveType.cs  PxArticulationJointReducedCoordinate.cs  PxArticulationLink.cs  PxArticulationReducedCoordinate.cs  PxBVH33MidphaseDesc.cs  PxBVH34MidphaseDesc.cs  PxBVHStructure.cs  PxBase.cs  PxBoxGeometry.cs  PxBroadPhaseCallback.cs  PxBroadPhaseRegionInfo.cs  PxConstraint.cs  PxConstraintFlag.cs  PxConstraintInvMassScale.cs  PxConvexMeshGeometry.cs  PxCooking.cs  PxCpuDispatcher.cs  PxDefaultErrorCallback.cs  PxDistanceJoint.cs  PxDistanceJointFlag.cs  PxForceMode.cs  PxGeometryHolder.cs  PxHeightField.cs  PxHeightFieldFormat.cs  PxJointLimitParameters.cs  PxMat44.cs  PxMaterialIndices.cs  PxMeshFlag.cs  PxMeshGeometryFlag.cs  PxMeshPreprocessingFlag.cs  PxPhysicsInsertionCallback.cs  PxPrismaticJointFlag.cs  PxPruningStructure.cs  (+14 more)
PhysX/: CMakeLists.txt  README.txt  generate_projects.cmd  generate_projects_premake_only.cmd  premake5.lua
PhysX/NVIDIA.PhysX/: CMakeLists.txt  Partial.cs  premake5.lua
PhysX/NVIDIA.PhysX.Native/: CMakeLists.txt  premake5.lua
PhysX/NVIDIA.PhysX.Native/Header/: header.h
PhysX/NVIDIA.PhysX.Native/Helpers/: Helpers.h
PhysX/NVIDIA.PhysX.Native/Interface/: BasicTypemaps.h
PhysX/NVIDIA.PhysX.Native/Wrapper/: NativeCSHARP_wrap.cxx  NativeCSHARP_wrap.h
PhysX/NVIDIA.PhysX.Unity/: CMakeLists.txt  EnumFlagAttribute.cs  Extensions.cs  PxDependency.cs  PxPhysics.cs  premake5.lua
PhysX/NVIDIA.PhysX.Unity/Assets/: PxAsset.cs  PxBoxShape.cs  PxCapsuleShape.cs  PxCompoundShape.cs  PxConvexMesh.cs  PxConvexMeshShape.cs  PxConvexShape.cs  PxHeightField.cs  PxHeightFieldShape.cs  PxMaterial.cs  PxPlaneShape.cs  PxSettings.cs  PxShape.cs  PxSimpleShape.cs  PxSolidShape.cs  PxSphereShape.cs  PxTriangleMesh.cs  PxTriangleMeshShape.cs
PhysX/NVIDIA.PhysX.Unity/Components/: PxActor.cs  PxArticulatedActor.cs  PxComponent.cs  PxD6Joint.cs  PxDynamicActor.cs  PxFixedJoint.cs  PxJoint.cs  PxScene.cs  PxStaticActor.cs  PxStaticBoxActor.cs
PhysX/NVIDIA.PhysX.UnityEditor/: CMakeLists.txt  premake5.lua
PhysX/NVIDIA.PhysX.UnityEditor/Editors/: PxEditor.cs
PhysX/NVIDIA.PhysX.UnityEditor/Editors/Assets/: PxAssetEditor.cs  PxBoxShapeEditor.cs  PxCapsuleShapeEditor.cs  PxCompoundShapeEditor.cs  PxConvexMeshEditor.cs  PxConvexMeshShapeEditor.cs  PxConvexShapeEditor.cs  PxHeightFieldEditor.cs  PxHeightFieldShapeEditor.cs  PxMaterialEditor.cs  PxPlaneShapeEditor.cs  PxSettingsEditor.cs  PxShapeEditor.cs  PxSimpleShapeEditor.cs  PxSolidShapeEditor.cs  PxSphereShapeEditor.cs  PxTriangleMeshEditor.cs  PxTriangleMeshShapeEditor.cs
PhysX/NVIDIA.PhysX.UnityEditor/Editors/Components/: PxActorEditor.cs  PxArticulatedActorEditor.cs  PxComponentEditor.cs  PxD6JointEditor.cs  PxDynamicActorEditor.cs  PxFixedJointEditor.cs  PxJointEditor.cs  PxSceneEditor.cs  PxStaticActorEditor.cs  PxStaticBoxActorEditor.cs
PhysX/NVIDIA.PhysX/Wrapper/: Native.cs  NativePINVOKE.cs  Px1DConstraint.cs  PxActor.cs  PxActorCollision.cs  PxActorFlag.cs  PxActorList.cs  PxActorShape.cs  PxActorTypeFlag.cs  PxAggregate.cs  PxAllocatorCallback.cs  PxArticulation.cs  PxArticulationAxis.cs  PxArticulationBase.cs  PxArticulationCache.cs  PxArticulationDriveCache.cs  PxArticulationDriveType.cs  PxArticulationFlag.cs  PxArticulationJoint.cs  PxArticulationJointBase.cs  PxArticulationJointDriveType.cs  PxArticulationJointReducedCoordinate.cs  PxArticulationJointType.cs  PxArticulationLink.cs  PxArticulationMotion.cs  PxArticulationReducedCoordinate.cs  PxArticulationRootLinkData.cs  PxBVH33MidphaseDesc.cs  PxBVH34MidphaseDesc.cs  PxBVHStructure.cs  PxBVHStructureDesc.cs  PxBase.cs  PxBaseFlag.cs  PxBaseTask.cs  PxBoundedData.cs  PxBounds3.cs  PxBoxGeometry.cs  PxBroadPhaseCallback.cs  PxBroadPhaseCaps.cs  PxBroadPhaseRegion.cs  (+182 more)
PhysX/Unity/PhysX/Assets/Carousel GRB/: Carousel GRB.unity
PhysX/Unity/PhysX/Assets/Carousel GRB/Resources/: CompanionCube.mat
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/API Samples/Resources/: Instanceable.mat
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/API Samples/Scripts/: SampleArticulation.cs  SampleBase.cs  SampleCarouselGRB.cs  SampleContactReport.cs  SampleConvexMesh.cs  SampleHeightField.cs  SampleHelloGRB.cs  SampleHelloWorld.cs  SampleJoints.cs  SampleList.cs  SampleTriangleMesh.cs  SampleTriggerReport.cs
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/PCS Samples/: PCS Samples.unity
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/PCS Samples/Assets/: BowlShape.asset  BowlTriangleMesh.asset  GemConvexMesh.asset  GemMesh.asset  GemShape.asset  SplashHeightField.asset  SplashShape.asset  SplashTerrainData.asset
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/PCS Samples/Prefabs/: SampleArticulation.prefab  SampleCollisionShapes.prefab  SampleContactReport.prefab  SampleCustomActor.prefab  SampleHelloWorld.prefab  SampleTriggerReport.prefab
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/PCS Samples/Resources/: ThrowBall.prefab
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/PCS Samples/Scenes/: SampleCollisionShapes.unity  SampleHelloWorld.unity  SampleJoints.unity  SampleTriggerReport.unity
PhysX/Unity/PhysX/Assets/NVIDIA/PhysX Samples/PCS Samples/Scripts/: AntController.cs  (+3 more)
PhysX/Unity/PhysX/Assets/Scenes/: Cylinder TriangleMesh.asset  DumpMesh.cs  StackOfBoxes.cs  Static Cylinder.asset  Test HeightField Shape.asset  Test HeightField.asset  Test000.unity  Test001.unity  Test003.unity  Test004.unity  TestCollision.cs  TestJointBreak.cs
PhysX/Unity/PhysX/Assets/Scenes/Tests/Prefabs/: Sample Plugin4000 API.prefab
PhysX/Unity/PhysX/ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+150 files in other folders)
